@@ -1,7 +1,7 @@
 #  File src/library/tools/R/xgettext.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2021 The R Core Team
+#  Copyright (C) 1995-2023 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -42,24 +42,30 @@ function(dir, verbose = FALSE, asCall = TRUE)
             if(is.character(e)) {
                 if(!suppress) strings <<- c(strings, e)
             } else if(is.call(e)) {
-                if(is.name(e[[1L]])
-                   && (as.character(e[[1L]]) %in% c("gettext", "gettextf"))) {
-                    domain <- e[["domain"]]
-                    suppress <- !is.null(domain) && !is.name(domain) && is.na(domain)
-                    if(as.character(e[[1L]]) == "gettextf") {
-                        e <- match.call(gettextf, e)
-                        e <- e["fmt"] # just look at fmt arg
-                    } else if(as.character(e[[1L]]) == "gettext" &&
-                              !is.null(names(e))) {
-                        e <- e[!(names(e) == "domain")] # remove domain arg
-                    }
-                } else if (identical(e[[1L]], quote(ngettext)))
-                    return()
+                if(is.name(e[[1L]])) {
+                    fname <- as.character(e[[1L]])
+                    if(fname %in% c("warningCondition", "errorCondition")) {
+                        e <- match.call(baseenv()[[fname]], e)
+                        e <- e["message"] # ignore condition class etc
+                    } else if(fname %in% c("gettext", "gettextf")) {
+                        domain <- e[["domain"]]
+                        suppress <- !is.null(domain) && !is.name(domain) && is.na(domain)
+                        if(fname == "gettextf") {
+                            e <- match.call(gettextf, e)
+                            e <- e["fmt"] # just look at fmt arg
+                        } else if(fname == "gettext" &&
+                                  !is.null(names(e))) {
+                            e <- e[!(names(e) == "domain")] # remove domain arg
+                        }
+                    } else if(fname == "ngettext")
+                        return()
+                }
                 for(i in seq_along(e)) find_strings2(e[[i]], suppress)
             }
         }
         if(is.call(e)
            && is.name(e[[1L]])
+           ## FIXME: this skips `base::`-prefixed calls
            && (as.character(e[[1L]])
                %in% c("warning", "stop", "message", "packageStartupMessage",
                       "gettext", "gettextf"))) {
